deploy: 3b84634963131a90d7bc9046cb27ae1860fc3930

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
+        <link rel="stylesheet" href="/konnektoren-yew/main-24f77729e5035a53.css" integrity="sha384&#x2D;4iPS4fe4&#x2B;Z5&#x2B;KZP7&#x2F;CZv7OeTp4mFzV3OqUtqsBHuumFv&#x2F;HYbXB8af&#x2F;d1fmjG1f2h"/>
         
         
-<script type="module" nonce="B/zoLq0I11N8YByzaf87PQ==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-11190118541467b1.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-11190118541467b1_bg.wasm' });
+<script type="module" nonce="MIyTDtwCyEYOkqEOhPOEEA==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-bfdf6d3b60f57d84.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-bfdf6d3b60f57d84_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -16,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-11190118541467b1.js" crossorigin=anonymous integrity="sha384-3mazPebkQJajqyX4oK19yNu8UQJUuQLCTm++68kt1qeciK29pku1sIlEkR/Xksew"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-11190118541467b1_bg.wasm" crossorigin=anonymous integrity="sha384-99W9PZ3ll7/pFkT+Zo7mbJNqXOUUIdR3zHdiFI4LhOscjTqgOtBw/TyRzNEEaP10" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-bfdf6d3b60f57d84.js" crossorigin=anonymous integrity="sha384-2s0jlFUpMGn1xupbKMGfyzwRH0Yd80AfoUJkVpR8JaPNMkv3czPgGMdwAW5Y0R+g"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-bfdf6d3b60f57d84_bg.wasm" crossorigin=anonymous integrity="sha384-mXJeOdIyD8hgRrDOnm73Hqphc1YIefIZDYKPF8XS+z+/FVALDFjg+voBkfLbJidk" as="fetch" type="application/wasm"></head>
 
-    <body></body>
+    <body class="theme-light"></body>
 </html>
