deploy: 376966a030ede5f4be6cbfe614936be4adedb60f

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-24f77729e5035a53.css" integrity="sha384&#x2D;4iPS4fe4&#x2B;Z5&#x2B;KZP7&#x2F;CZv7OeTp4mFzV3OqUtqsBHuumFv&#x2F;HYbXB8af&#x2F;d1fmjG1f2h"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-3995ea02472adeda.css" integrity="sha384&#x2D;8zd9K1e4G0ePKQURcn8ZNcUEFkHexEZzh2Fr2xY1CdTCds&#x2B;dLdR0gohJfc&#x2F;Erwji"/>
         
         
-<script type="module" nonce="ai2F5d1uo9HY0QzlbS3ptg==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-beb52450b089c5b3.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-beb52450b089c5b3_bg.wasm' });
+<script type="module" nonce="xbHrIPi5iXpVLuj8cwZm8A==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-beb52450b089c5b3.js" crossorigin=anonymous integrity="sha384-FfcxSvGHOKpPuk5RE2z7uYQGxBpOZKrNdedfEwiRPJVHk11znmkk2JZCULTU7cVW"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-beb52450b089c5b3_bg.wasm" crossorigin=anonymous integrity="sha384-6eNFcyputDTfudCiVyuKUBp9+z27TSygSPI+53jMhHhw25hxe4bZV5yqEmbqkDbX" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475.js" crossorigin=anonymous integrity="sha384-whRBx51zyyhzyZS3b52wzIhqgYHO1MBjtLHbswK/fQJ0pHfhiMeTaYEG5VZmQpwt"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475_bg.wasm" crossorigin=anonymous integrity="sha384-TCeVhlsQGtGoBntbpqLsFBoQkwNYTZ+kMo39+Pmti2E3kMDpe1hmuTTTY4uZMjCi" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
