deploy: 6da1b70ff6030d1b3bd33d3c214494e8b6a44507

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-3995ea02472adeda.css" integrity="sha384&#x2D;8zd9K1e4G0ePKQURcn8ZNcUEFkHexEZzh2Fr2xY1CdTCds&#x2B;dLdR0gohJfc&#x2F;Erwji"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-b5978793a32696f5.css" integrity="sha384&#x2D;&#x2B;S5&#x2F;kbbSdzSGLLdgvXiCuygwc28zMKmXuiQ3zqdujUBuGxfRkSTEMRm0AVCNZdq2"/>
         
         
-<script type="module" nonce="xbHrIPi5iXpVLuj8cwZm8A==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475_bg.wasm' });
+<script type="module" nonce="ilHpWecg0A8L8fxWGba+wg==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475.js" crossorigin=anonymous integrity="sha384-whRBx51zyyhzyZS3b52wzIhqgYHO1MBjtLHbswK/fQJ0pHfhiMeTaYEG5VZmQpwt"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-97b0a52460ed8475_bg.wasm" crossorigin=anonymous integrity="sha384-TCeVhlsQGtGoBntbpqLsFBoQkwNYTZ+kMo39+Pmti2E3kMDpe1hmuTTTY4uZMjCi" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd.js" crossorigin=anonymous integrity="sha384-BT4EbcDn6adqY61AgXeNBAxz+Zq1N4WpsLG+13SBvB1T9hha9SKm+Uns0hYSWJsQ"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd_bg.wasm" crossorigin=anonymous integrity="sha384-o4Z1vyKXjTho4vF+YwFwTc3ET5GpN1rQsD79Tv+aEKyIVmzQzri6QR1OGfeuysYG" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
