deploy: 4e0c4b5fa6fdbc97a3df6a18f5c1c2f9c6a418b0

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-b5978793a32696f5.css" integrity="sha384&#x2D;&#x2B;S5&#x2F;kbbSdzSGLLdgvXiCuygwc28zMKmXuiQ3zqdujUBuGxfRkSTEMRm0AVCNZdq2"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-2adf7fde5f633329.css" integrity="sha384&#x2D;YsMs5AZIsMbeb7fqoGLycaHsEjMNIYoxJwCZ9A6xMFfLdOP5l7pc0Ac5VChG9wyO"/>
         
         
-<script type="module" nonce="ilHpWecg0A8L8fxWGba+wg==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd_bg.wasm' });
+<script type="module" nonce="tqeV3lCvzy3s7AglibI1GQ==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd.js" crossorigin=anonymous integrity="sha384-BT4EbcDn6adqY61AgXeNBAxz+Zq1N4WpsLG+13SBvB1T9hha9SKm+Uns0hYSWJsQ"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-d4425a8b1ba065dd_bg.wasm" crossorigin=anonymous integrity="sha384-o4Z1vyKXjTho4vF+YwFwTc3ET5GpN1rQsD79Tv+aEKyIVmzQzri6QR1OGfeuysYG" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb.js" crossorigin=anonymous integrity="sha384-CLW3mAnkpEn6j2VY9d0uuuc8uegi7QsSSOVuj7+6JB0/Pf9cH7pec4aLJpzPko/4"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb_bg.wasm" crossorigin=anonymous integrity="sha384-cBl4k3+oFD2w+VKvLQE7UtO3e39xKu1GFRD53n55xrhHdx4bPS149gh8tKiyeCr9" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
