deploy: d86cf74b6c70cef995210c0a74e188ab3cfc300c

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-2adf7fde5f633329.css" integrity="sha384&#x2D;YsMs5AZIsMbeb7fqoGLycaHsEjMNIYoxJwCZ9A6xMFfLdOP5l7pc0Ac5VChG9wyO"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-ce02c1cde9fbd670.css" integrity="sha384&#x2D;Tbf2mP2aWwIdzOfPuCxsynZgsiCCytzmiS1uka&#x2F;l9DOSCUlFtQj&#x2B;0weXCo5iAag0"/>
         
         
-<script type="module" nonce="tqeV3lCvzy3s7AglibI1GQ==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb_bg.wasm' });
+<script type="module" nonce="IBdk9g1EUaDU+NJeLVFCvg==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-602817a4a77edeb5.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-602817a4a77edeb5_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb.js" crossorigin=anonymous integrity="sha384-CLW3mAnkpEn6j2VY9d0uuuc8uegi7QsSSOVuj7+6JB0/Pf9cH7pec4aLJpzPko/4"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-cbf4d06a3cf88aeb_bg.wasm" crossorigin=anonymous integrity="sha384-cBl4k3+oFD2w+VKvLQE7UtO3e39xKu1GFRD53n55xrhHdx4bPS149gh8tKiyeCr9" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-602817a4a77edeb5.js" crossorigin=anonymous integrity="sha384-y+t4LnsZVu4wrurZZTQE30ht8n2GNA9cU8usXqKorm5pO6jxfj5yjoes+zKO/ZVp"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-602817a4a77edeb5_bg.wasm" crossorigin=anonymous integrity="sha384-8Khi9LQHAc914JYduJoBGRaCFQnCaboPeEebljZ1zUvu+aTJ+UGsrz9oSpXoWE9R" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
