deploy: d34941237759c54924d04adb44310ad324bae981

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-ce02c1cde9fbd670.css" integrity="sha384&#x2D;Tbf2mP2aWwIdzOfPuCxsynZgsiCCytzmiS1uka&#x2F;l9DOSCUlFtQj&#x2B;0weXCo5iAag0"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-a29c9d566e281eda.css" integrity="sha384&#x2D;Gg&#x2B;l&#x2B;qdtqD1pzSyb3Y&#x2F;lwdICuXY&#x2F;NcqjVJA46C2LRbOniRYrMhaJNOKvXl0TOsyp"/>
         
         
-<script type="module" nonce="+YyQSLHXZp9m8LC0SJ11gg==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-939055c2cedec61.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-939055c2cedec61_bg.wasm' });
+<script type="module" nonce="zy0Ak/x3SowoTojWK/160Q==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-939055c2cedec61.js" crossorigin=anonymous integrity="sha384-y+t4LnsZVu4wrurZZTQE30ht8n2GNA9cU8usXqKorm5pO6jxfj5yjoes+zKO/ZVp"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-939055c2cedec61_bg.wasm" crossorigin=anonymous integrity="sha384-3ElOhxbI98XVGlpphupJTUjNf8mC1qFRPpYz0Ak5C/2KtVdNsLbp4EoeXpBWZqgL" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2.js" crossorigin=anonymous integrity="sha384-SelYIxb5m9XoIRpmWOFIoSG9d7bgNSn2d/sM5QfmH+RodDLAhNfRL/rXqgXJmvZQ"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2_bg.wasm" crossorigin=anonymous integrity="sha384-orRK8CIBlzgYghBlxkdCdRo2e/6ixJ6lSob9+mLMGUXoINXOz1gorYD+LWH5hbwA" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
