deploy: 7e84112e6b4a9aeccaf1b6739496ec55aad32d0c

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-a29c9d566e281eda.css" integrity="sha384&#x2D;Gg&#x2B;l&#x2B;qdtqD1pzSyb3Y&#x2F;lwdICuXY&#x2F;NcqjVJA46C2LRbOniRYrMhaJNOKvXl0TOsyp"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-fa9a997dfbbf2e58.css" integrity="sha384&#x2D;CQ9P3bs3h95T1QiEHXrUbi2zRO5ru7vRfwLZB&#x2B;psG980zKsS3Gl&#x2F;iZ&#x2B;IDR9ID2ot"/>
         
         
-<script type="module" nonce="zy0Ak/x3SowoTojWK/160Q==">
+<script type="module" nonce="0QE3x8s1RNPUnUD+9U3umA==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2_bg.wasm' });
 
