deploy: 7c5ad0acc3c3c59adcdb6665fcfe0e2c97910b13

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-fa9a997dfbbf2e58.css" integrity="sha384&#x2D;CQ9P3bs3h95T1QiEHXrUbi2zRO5ru7vRfwLZB&#x2B;psG980zKsS3Gl&#x2F;iZ&#x2B;IDR9ID2ot"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-604dbab3078292b2.css" integrity="sha384&#x2D;Cfzz4F&#x2B;b7UPysuZoW&#x2B;48se&#x2F;63rWzaCLOcRaHrJ&#x2F;4BOgN8yJp7wJRR8vAYjh&#x2B;TBls"/>
         
         
-<script type="module" nonce="0QE3x8s1RNPUnUD+9U3umA==">
+<script type="module" nonce="wookG9es0jHwsleBlDoybQ==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2_bg.wasm' });
 
