deploy: eae79a274c4a6cd0eaae06de3e924a1d28a50148

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-604dbab3078292b2.css" integrity="sha384&#x2D;Cfzz4F&#x2B;b7UPysuZoW&#x2B;48se&#x2F;63rWzaCLOcRaHrJ&#x2F;4BOgN8yJp7wJRR8vAYjh&#x2B;TBls"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-7d979b1da5b54769.css" integrity="sha384&#x2D;C&#x2B;HMwlR2IH023vHJ1c1u8XouWOpV3eBAxGoIegM1VHyf&#x2B;mUpEX1FkLufeSQrvhjk"/>
         
         
-<script type="module" nonce="wookG9es0jHwsleBlDoybQ==">
+<script type="module" nonce="HZFD0opkBdQR8rZwBJy2ZQ==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2_bg.wasm' });
 
