deploy: bba675539c08364e0bb490c1e17fbf04eb457c94

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-7d979b1da5b54769.css" integrity="sha384&#x2D;C&#x2B;HMwlR2IH023vHJ1c1u8XouWOpV3eBAxGoIegM1VHyf&#x2B;mUpEX1FkLufeSQrvhjk"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-37fe33016daca268.css" integrity="sha384&#x2D;oGeiapHr0kZr0TwIfBtnzUvpPvCepouBwfJGgziiw0&#x2F;fl7m6&#x2F;aqhGH1&#x2B;Rm9tO67n"/>
         
         
-<script type="module" nonce="yYvhMsAjUB6QCFsMwupwqw==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2_bg.wasm' });
+<script type="module" nonce="vXSovZ9yjdfSBs4ydjiLHg==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-43a34f2257a690e6.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-43a34f2257a690e6_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2.js" crossorigin=anonymous integrity="sha384-SelYIxb5m9XoIRpmWOFIoSG9d7bgNSn2d/sM5QfmH+RodDLAhNfRL/rXqgXJmvZQ"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-b96adb668a114ce2_bg.wasm" crossorigin=anonymous integrity="sha384-orRK8CIBlzgYghBlxkdCdRo2e/6ixJ6lSob9+mLMGUXoINXOz1gorYD+LWH5hbwA" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-43a34f2257a690e6.js" crossorigin=anonymous integrity="sha384-J2UqcEXzx5K0in9j66sjrJtBG7lzPrrAuEfgm/Ul7MK5uU3OyCdsgW+bWjOh6pC7"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-43a34f2257a690e6_bg.wasm" crossorigin=anonymous integrity="sha384-L2/xNV/kouT6E2OLmZEjZ/KYaezjz9ONmFGiIFLWahzwbrgZIRbGHLxYAh1MaJ3o" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
