deploy: 37f5d47eb1b05149078b754aa30609855b82dc09

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-37fe33016daca268.css" integrity="sha384&#x2D;oGeiapHr0kZr0TwIfBtnzUvpPvCepouBwfJGgziiw0&#x2F;fl7m6&#x2F;aqhGH1&#x2B;Rm9tO67n"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-8cf3717034563d00.css" integrity="sha384&#x2D;DH7TpgXp6&#x2B;K8Dl127whqcCD7fQO2edfpG4x7eN1gwyaKcdghXc4vPGcEBg0qykRa"/>
         
         
-<script type="module" nonce="sdkv9nm3xJMW47LyZoKd4w==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-82f7f323bab4bb18.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-82f7f323bab4bb18_bg.wasm' });
+<script type="module" nonce="FbBiOBS15Je0gL0+RzmZiQ==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-f0c172636f4c50f9.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-f0c172636f4c50f9_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-82f7f323bab4bb18.js" crossorigin=anonymous integrity="sha384-LhYKldilUqN2bNJRvvatehLHSezbFabcIlcDllB3jSi7+qtoUTvb0t9RQ8zZvZNq"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-82f7f323bab4bb18_bg.wasm" crossorigin=anonymous integrity="sha384-OAIwDP4JmoJFmzIdq4NlLtlJ8lx6o3wpOmM1bfd+mZnwsFkcks1TmwJXq7x7+iDV" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-f0c172636f4c50f9.js" crossorigin=anonymous integrity="sha384-snYfdHbQsay+zqTx/VOGEBXrzl3QWrp50hc8i3Vx+4PRZjQowRdCvAtZUO+tmItq"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-f0c172636f4c50f9_bg.wasm" crossorigin=anonymous integrity="sha384-nWTkWECSiaMagCePloc0tc/AfAuFse/ariw74Ht9mDFuk8I2Mau8KVwi60udYkHt" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
