deploy: 796343cea3e30aba3cf7dfb6aa6b1fd650e0e6c9

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-8cf3717034563d00.css" integrity="sha384&#x2D;DH7TpgXp6&#x2B;K8Dl127whqcCD7fQO2edfpG4x7eN1gwyaKcdghXc4vPGcEBg0qykRa"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-adb81eb9ab19defb.css" integrity="sha384&#x2D;BiZJzvbXYeNJMM7RLs&#x2F;1bE8OUMVc&#x2B;OF6RGtUL4Tw&#x2F;YebtY1XjDjeDjfUuqjVVpCo"/>
         
         
-<script type="module" nonce="3bpWsi0bjqVmdp1vqP11iA==">
+<script type="module" nonce="AqKRNGIk7TBRNiZqvVNUVw==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b_bg.wasm' });
 
