--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-adb81eb9ab19defb.css" integrity="sha384&#x2D;BiZJzvbXYeNJMM7RLs&#x2F;1bE8OUMVc&#x2B;OF6RGtUL4Tw&#x2F;YebtY1XjDjeDjfUuqjVVpCo"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-fbe7dbaa7c2d7ec4.css" integrity="sha384&#x2D;eyb7vvugtDGt5APCJCbkMqR8v4tQacVUe0B&#x2B;MmDrjHNvhF&#x2B;73fjpD8yqLjNwt9eI"/>
         
         
-<script type="module" nonce="AqKRNGIk7TBRNiZqvVNUVw==">
+<script type="module" nonce="VrLZP/RTuDCv2/kowdNlFQ==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b_bg.wasm' });
 
