deploy: 7a6bc1efeba67eb43cd37c5055db823c011563c6

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-fbe7dbaa7c2d7ec4.css" integrity="sha384&#x2D;eyb7vvugtDGt5APCJCbkMqR8v4tQacVUe0B&#x2B;MmDrjHNvhF&#x2B;73fjpD8yqLjNwt9eI"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-d0f850f3aa00f7b6.css" integrity="sha384&#x2D;OPJE1gCvl3lJYVxHvB2xPDMytgCFD4&#x2F;1&#x2B;IhR8r2YOMU4zkC&#x2B;apfqNkgFOCRp9JYT"/>
         
         
-<script type="module" nonce="VrLZP/RTuDCv2/kowdNlFQ==">
+<script type="module" nonce="MDKGgBGM+NZrVtaL2dYuxQ==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b_bg.wasm' });
 
