deploy: fce13d44528129d363faf6a6b5d7dc782c2aba10

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-d0f850f3aa00f7b6.css" integrity="sha384&#x2D;OPJE1gCvl3lJYVxHvB2xPDMytgCFD4&#x2F;1&#x2B;IhR8r2YOMU4zkC&#x2B;apfqNkgFOCRp9JYT"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-3264319a8117eeb8.css" integrity="sha384&#x2D;7&#x2B;nPXVgMHJ6RbFUVylm95O8yvFkeVGZIC1Dl&#x2B;p3SPJR5nKfcIwdK9u9iYqnjkAwe"/>
         
         
-<script type="module" nonce="MDKGgBGM+NZrVtaL2dYuxQ==">
+<script type="module" nonce="YdZ+orXrUFSHjIdVKh4X3Q==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b_bg.wasm' });
 
