deploy: 4422fb33db80ae400ed6d4704a5f4dbe723447b2

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-3264319a8117eeb8.css" integrity="sha384&#x2D;7&#x2B;nPXVgMHJ6RbFUVylm95O8yvFkeVGZIC1Dl&#x2B;p3SPJR5nKfcIwdK9u9iYqnjkAwe"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-d27f53f44014f2c3.css" integrity="sha384&#x2D;h1psM&#x2B;4eopKGkhJClST76JijU0Vu7WOJLRGuW0HPRLjYwCxP4coZt9j9khNfhFwl"/>
         
         
-<script type="module" nonce="YdZ+orXrUFSHjIdVKh4X3Q==">
+<script type="module" nonce="izSAeE9hFjo11J+oD0WGWA==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-56326b1cf60b236b_bg.wasm' });
 
