deploy: 67ca599a68b8789def192813a48391f66cca39c2

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-d27f53f44014f2c3.css" integrity="sha384&#x2D;h1psM&#x2B;4eopKGkhJClST76JijU0Vu7WOJLRGuW0HPRLjYwCxP4coZt9j9khNfhFwl"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-8c84b122fba410bc.css" integrity="sha384&#x2D;3c1mThAlC6u9MDS5cT6WGsob1uItEIjyoTM1191QHTY8EKhIoPH&#x2F;F0UbV9z9uNUs"/>
         
         
-<script type="module" nonce="5ojd1RjhtaOCGm6ojuaIkQ==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-4842385fb24bbb3f.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-4842385fb24bbb3f_bg.wasm' });
+<script type="module" nonce="0S8hpbvIjnXiJ1Q3/ojJDw==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-4842385fb24bbb3f.js" crossorigin=anonymous integrity="sha384-ZhAxd5kGXmIPzKr6bQFJ9YoaRF5Q2obUc58DaG8U26RRVmj9qv5Gcq12a9kJpKJp"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-4842385fb24bbb3f_bg.wasm" crossorigin=anonymous integrity="sha384-c3FyK9c+Jl9Fu5vyTsjxM+lLjGRxjTiIzcLqt+IMUz/JCEK4tyeZRlt0aY3Vh9b/" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42.js" crossorigin=anonymous integrity="sha384-wKSRrrGVYwQMYPto0+BFUHgu2CDjaKprKDYOcqIRyzf52en1Kf48Hx8LuqYTxagQ"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42_bg.wasm" crossorigin=anonymous integrity="sha384-wMWozic55X2nc8p2CcEz7uQ8F7Snd2RKyh41EICH/zWUd5dUXf8RSC1Ae2ZTLvV8" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
