deploy: 838b58f38d6fd783826d7e40314ed45bc5c84a0e

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-8c84b122fba410bc.css" integrity="sha384&#x2D;3c1mThAlC6u9MDS5cT6WGsob1uItEIjyoTM1191QHTY8EKhIoPH&#x2F;F0UbV9z9uNUs"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-f87871b0d9bd5013.css" integrity="sha384&#x2D;vwwV&#x2B;qoKylUolIn&#x2B;8Q&#x2B;h&#x2B;jNPi47kjaVr&#x2F;Fp9MKSihRij&#x2B;hg6pkSEyEsfNGwLqlIQ"/>
         
         
-<script type="module" nonce="0S8hpbvIjnXiJ1Q3/ojJDw==">
+<script type="module" nonce="fv6QweNb/8HZWTFzbSONTQ==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42_bg.wasm' });
 
