deploy: 2a75747b6853031c9859ba06a13fd2e85c12ceef

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-f87871b0d9bd5013.css" integrity="sha384&#x2D;vwwV&#x2B;qoKylUolIn&#x2B;8Q&#x2B;h&#x2B;jNPi47kjaVr&#x2F;Fp9MKSihRij&#x2B;hg6pkSEyEsfNGwLqlIQ"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-bc71aeae4d5fb39c.css" integrity="sha384&#x2D;Jz&#x2F;Vyl7MLPBWSHi97Vh8B8lLNLmcAo&#x2B;wQtUxZsFBSmiqNgPLNcflzsKXgEPv23Lt"/>
         
         
-<script type="module" nonce="fv6QweNb/8HZWTFzbSONTQ==">
+<script type="module" nonce="fIrtMKrecUay+vikuvO/fw==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42_bg.wasm' });
 
