deploy: a221cf611735a318dcb862baa41c5c94bcd009c8

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-bc71aeae4d5fb39c.css" integrity="sha384&#x2D;Jz&#x2F;Vyl7MLPBWSHi97Vh8B8lLNLmcAo&#x2B;wQtUxZsFBSmiqNgPLNcflzsKXgEPv23Lt"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-ce91a5b2d05e8f20.css" integrity="sha384&#x2D;YNQLHTods0lzTGV93HPoVLb9b1ajoONAAV&#x2F;&#x2B;JIrr0gqwSmXtOa5yv9ksI7ytQEEH"/>
         
         
-<script type="module" nonce="fIrtMKrecUay+vikuvO/fw==">
+<script type="module" nonce="87fo77IxgtKPR/hzTuWkGg==">
 import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42.js';
 const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-865afcaadba0ae42_bg.wasm' });
 
