deploy: b4714d3f6176269e1b27f929fd57462fbead9a63

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-ce91a5b2d05e8f20.css" integrity="sha384&#x2D;YNQLHTods0lzTGV93HPoVLb9b1ajoONAAV&#x2F;&#x2B;JIrr0gqwSmXtOa5yv9ksI7ytQEEH"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-ba259b946cca6c63.css" integrity="sha384&#x2D;kvrWiPUZEF3hHk1AqkgyA4o&#x2B;&#x2B;0DmxQs27C&#x2F;GTCEYglayW2BsHjh5hpMSWcSQM22k"/>
         
         
-<script type="module" nonce="wBFi62pj9KE9Jg9KGJjKWw==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-341ab0a510fe3f3a.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-341ab0a510fe3f3a_bg.wasm' });
+<script type="module" nonce="jgqxWyIKgJsBy7gGekvepw==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-341ab0a510fe3f3a.js" crossorigin=anonymous integrity="sha384-wMQu+YlLi4sXjRGuoQyVmfVpGeN453xuJ4DZ28fHfFT1JVqV4TyTzN+xQf03zsqc"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-341ab0a510fe3f3a_bg.wasm" crossorigin=anonymous integrity="sha384-wwkzbSkArtRnTY0qjR8z08TKOYqIei/zhZnrY87UKPw8wJTPLB70YYOxVDzDd9sL" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f.js" crossorigin=anonymous integrity="sha384-OursltXFNrNAF47o1t7HKsV8coOK+LjLoxv+kElVchMy2SzyyG+RHxODlbJW3qhw"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f_bg.wasm" crossorigin=anonymous integrity="sha384-FyAfpJShmscEgQPtkUL2oMpp+3B4WBK0loNkVlWTk2XJAXFX4MZBhrPS6lHC9a1p" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
