--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-ba259b946cca6c63.css" integrity="sha384&#x2D;kvrWiPUZEF3hHk1AqkgyA4o&#x2B;&#x2B;0DmxQs27C&#x2F;GTCEYglayW2BsHjh5hpMSWcSQM22k"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-824d50a8dab2ed77.css" integrity="sha384&#x2D;IXfM8aUGvqCoWq63Yt6HXyxVdKzSGY0mNzV3Xy13XkYoucbufjnJIUFXxENlyn8a"/>
         
         
-<script type="module" nonce="jgqxWyIKgJsBy7gGekvepw==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f_bg.wasm' });
+<script type="module" nonce="Kj03WK33COnHtjF7IZYzZg==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b9f7badd07657d13.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b9f7badd07657d13_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f.js" crossorigin=anonymous integrity="sha384-OursltXFNrNAF47o1t7HKsV8coOK+LjLoxv+kElVchMy2SzyyG+RHxODlbJW3qhw"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-9d3b67e03d91903e/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-daf7ff042ad5137f_bg.wasm" crossorigin=anonymous integrity="sha384-FyAfpJShmscEgQPtkUL2oMpp+3B4WBK0loNkVlWTk2XJAXFX4MZBhrPS6lHC9a1p" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-b9f7badd07657d13.js" crossorigin=anonymous integrity="sha384-vYyO9xRj51MLMtcZNLm+msWHJysRNry64leNQAa10+TMdqHVdOPyG9/ILP1YM6PA"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-a2bbd285a6d6f368/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-b9f7badd07657d13_bg.wasm" crossorigin=anonymous integrity="sha384-BsrkOXEDAaF552bqxPN+sZoM6Gsll3JxjrPkxKv5DUJg9wk9JF7nzR8hzM6DiTN8" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
