--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-824d50a8dab2ed77.css" integrity="sha384&#x2D;IXfM8aUGvqCoWq63Yt6HXyxVdKzSGY0mNzV3Xy13XkYoucbufjnJIUFXxENlyn8a"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-5cd622538d232710.css" integrity="sha384&#x2D;N7QsTBDBaXkXrp8AZWrLlqD&#x2B;E3qQi8&#x2B;jkig2whk7Hd2eiR3HNvm56C5zBBp4yc5g"/>
         
         
-<script type="module" nonce="LoCYTlz0gMWALDfUbOM4bA==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-fbca838f45f10f38.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-fbca838f45f10f38_bg.wasm' });
+<script type="module" nonce="SHWF+7/bUz1QwUnWC+Rgtg==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-1979c721e87e0914.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-1979c721e87e0914_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-fbca838f45f10f38.js" crossorigin=anonymous integrity="sha384-vYyO9xRj51MLMtcZNLm+msWHJysRNry64leNQAa10+TMdqHVdOPyG9/ILP1YM6PA"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-a2bbd285a6d6f368/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-fbca838f45f10f38_bg.wasm" crossorigin=anonymous integrity="sha384-mOAfBaRgSjmx2Ijr1Tg+xscCB3G351X94qXqzVaCrZU85Zg2NJWbRzwFR0049LKj" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-1979c721e87e0914.js" crossorigin=anonymous integrity="sha384-tTHAbCnaIvT10wC3JQhX8GF9wwTjwXUSatGO//6VcriS2/2h3CFwobaSNj1NzQyv"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-2fb86486e429f586/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-1979c721e87e0914_bg.wasm" crossorigin=anonymous integrity="sha384-K0BV7O/t0omi+V/Dr7mq1iZQyeLU+dzoGUtnrEMIFkyKoKflTm6vjmQdtQdyusja" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
