deploy: 6403cc9da8804c86e308cc272e06455052c50eb5

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-5cd622538d232710.css" integrity="sha384&#x2D;N7QsTBDBaXkXrp8AZWrLlqD&#x2B;E3qQi8&#x2B;jkig2whk7Hd2eiR3HNvm56C5zBBp4yc5g"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-1117f892d64ca353.css" integrity="sha384&#x2D;u03pDQ6GApwZzJ&#x2B;SCEKrGBTgnHhhvi4dS&#x2F;ZYz&#x2F;1uxdxBbNsHgRpTNCnXtyd2cLc&#x2F;"/>
         
         
-<script type="module" nonce="aQLBsiJv+Qoq4n5/U4GZ3g==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-e4b16d69adc27308.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-e4b16d69adc27308_bg.wasm' });
+<script type="module" nonce="T/Hnu1znSzsagjICcQlAMw==">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-73f7ac24256a3488.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-73f7ac24256a3488_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-e4b16d69adc27308.js" crossorigin=anonymous integrity="sha384-pH0DCJbm2/lUSzUTw3uPqIvQeKK6djbeZ0hWkAezah6leBFc+CnMKJWB22XwhD6W"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-2fb86486e429f586/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-e4b16d69adc27308_bg.wasm" crossorigin=anonymous integrity="sha384-Y4VmfsswcwAnDl6MOlIdf2iDBu6i2aLlp0JTdOoT8+tBB+0Jju1AvziL+erVtbGb" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-73f7ac24256a3488.js" crossorigin=anonymous integrity="sha384-WJsBIh63CIkyrSEyYw3ZOUSAKXAic8kV5DF32yG2CB0nV0CJTXa6eSgMosQ6HtOv"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-73f7ac24256a3488_bg.wasm" crossorigin=anonymous integrity="sha384-N4DtXK7ESmiWYZlRV/fc738DGh7d/BBfBOdLyiNvAnIGdMjOMvN0YTiLq/sWRT8P" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
